# cr_project_planner

./: Cargo.toml
src/: app.rs  main.rs
src/project/: mod.rs  task.rs
