[package]
name = "cr_project_planner"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.25.0", features = ["serde","persistence","glow"]}
egui = "0.25.0"
egui_extras = { version = "0.25.0", features = ["datepicker", "all_loaders","document-features","chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.10"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = { version = "0.8.5", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4","fast-rng", "serde"]}
self_update = { version = "0.39.0", features = ["archive-zip","compression-zip-deflate"]}

[profile.release]
opt-level = 3
lto = true
